less mess jak to sie mowi

--- a/Calculator.html
+++ b/Calculator.html
@@ -10,7 +10,8 @@
   <body>
     <div>
       <p>history logs:</p>
-      <textarea class="textareaha" rows="50" cols="50"> </textarea>
+      <textarea class="textareaha" rows="50" cols="50" disabled="true">
+      </textarea>
     </div>
     <div id="calculator">
       <div class="cell" id="result-holder">
